# chemistry-engine

./: .gitignore  CMakeLists.txt  README.md  compound.cpp  element.cpp  main  main.cpp  reaction.cpp
include/: compound.h  element.h  reaction.h
inputs/: compound.in  element.in  reactant.in
